--- a/app/src/main/res/layout/stockroom_chart_item.xml
+++ b/app/src/main/res/layout/stockroom_chart_item.xml
@@ -44,7 +44,7 @@
         app:layout_constraintTop_toTopOf="@+id/textViewSymbol"
         app:layout_constraintBottom_toBottomOf="@id/textViewSymbol"
         app:layout_constraintEnd_toStartOf="@id/textViewSymbol"
-        />
+        android:contentDescription="@string/symbol_image" />
 
     <TextView
         android:id="@+id/textViewSymbol"
