--- a/app/src/main/res/layout/fragment_calc.xml
+++ b/app/src/main/res/layout/fragment_calc.xml
@@ -132,16 +132,6 @@
         />
 
     <TextView
-        android:id="@+id/calc_sign"
-        android:text="±"
-        app:layout_constraintBottom_toTopOf="@id/guideline789"
-        app:layout_constraintEnd_toStartOf="@id/guidelineX4"
-        app:layout_constraintStart_toEndOf="@id/guidelineX3"
-        app:layout_constraintTop_toBottomOf="@+id/guidelineEnter"
-        style="@style/calc_style"
-        />
-
-    <TextView
         android:id="@+id/calc_drop"
         android:text="\u232b"
         app:layout_constraintBottom_toTopOf="@id/guideline789"
@@ -257,6 +247,16 @@
         app:layout_constraintBottom_toTopOf="@id/guideline00"
         app:layout_constraintEnd_toStartOf="@id/guidelineX3"
         app:layout_constraintStart_toEndOf="@id/guidelineX2"
+        app:layout_constraintTop_toBottomOf="@+id/guideline0"
+        style="@style/calc_style"
+        />
+
+    <TextView
+        android:id="@+id/calc_sign"
+        android:text="±"
+        app:layout_constraintBottom_toTopOf="@id/guideline00"
+        app:layout_constraintEnd_toStartOf="@id/guidelineX4"
+        app:layout_constraintStart_toEndOf="@id/guidelineX3"
         app:layout_constraintTop_toBottomOf="@+id/guideline0"
         style="@style/calc_style"
         />
