--- a/app/src/main/res/layout/fragment_stockdata.xml
+++ b/app/src/main/res/layout/fragment_stockdata.xml
@@ -525,6 +525,17 @@
               app:layout_constraintBottom_toBottomOf="parent"
               />
 
+          <com.thecloudsite.stockroom.utils.RotaryControl
+              android:id="@+id/rotaryControl"
+              android:layout_width="0dp"
+              android:layout_height="0dp"
+              android:layout_marginTop="16dp"
+              app:layout_constraintStart_toStartOf="parent"
+              app:layout_constraintEnd_toStartOf="@id/guidelineKnob"
+              app:layout_constraintTop_toBottomOf="@id/picker_knob"
+              app:layout_constraintBottom_toBottomOf="parent"
+              />
+
           <androidx.constraintlayout.widget.Guideline
               android:id="@+id/guidelineKnob"
               android:layout_width="wrap_content"
