--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -37,14 +37,14 @@ limitations under the License. -->
         android:layout_height="wrap_content">
 
         <Spinner
-            android:id="@+id/stockTypeSpinner"
+            android:id="@+id/dataproviderSpinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
-            android:entries="@array/stocktype_items"
+            android:entries="@array/dataprovider_items"
             />
 
         <Spinner
