--- a/app/src/main/res/layout/dialog_add_dividend.xml
+++ b/app/src/main/res/layout/dialog_add_dividend.xml
@@ -67,7 +67,10 @@
           android:id="@+id/textViewAssetAccount"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
-          android:layout_margin="32dp"
+          android:layout_marginStart="8dp"
+          android:layout_marginEnd="8dp"
+          android:layout_marginTop="32dp"
+          android:layout_marginBottom="32dp"
           app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toEndOf="@+id/guideline1"
