--- a/app/src/main/res/values-de/arrays.xml
+++ b/app/src/main/res/values-de/arrays.xml
@@ -62,6 +62,10 @@
     <item>Dunkel</item>
     <item>Automatisch entsprechend dem Batteriestand</item>
   </string-array>
+  <string-array name="app_theme_textcolor_red">
+    <item>Standardfarbe</item>
+    <item>Weiß</item>
+  </string-array>
   <string-array name="calc_format_displayed_decimals">
     <item>2 (3,14)</item>
     <item>2..4 (3.1415)</item>
