--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -107,6 +107,14 @@
     <item>2</item>
     <item>3</item>
   </string-array>
+  <string-array name="app_theme_textcolor_red">
+    <item>Default color</item>
+    <item>White</item>
+  </string-array>
+  <string-array translatable="false" name="app_theme_textcolor_red_values">
+    <item>0</item>
+    <item>1</item>
+  </string-array>
   <string-array name="calc_format_displayed_decimals">
     <item>2 (3.14)</item>
     <item>2..4 (3.1415)</item>
