--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -107,11 +107,11 @@
     <item>2</item>
     <item>3</item>
   </string-array>
-  <string-array name="app_theme_textcolor_red">
+  <string-array name="app_theme_textcolor_redgreen">
     <item>Default color</item>
     <item>White</item>
   </string-array>
-  <string-array translatable="false" name="app_theme_textcolor_red_values">
+  <string-array translatable="false" name="app_theme_textcolor_redgreen_values">
     <item>0</item>
     <item>1</item>
   </string-array>
