--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -13,12 +13,12 @@
         />
 
     <ListPreference
-        android:key="app_theme_textcolor_red"
-        android:title="@string/app_theme_textcolor_red"
+        android:key="app_theme_textcolor_redgreen"
+        android:title="@string/app_theme_textcolor_redgreen"
         android:defaultValue="0"
-        android:entryValues="@array/app_theme_textcolor_red_values"
-        android:entries="@array/app_theme_textcolor_red"
-        app:icon="@drawable/ic_action_app_theme_textcolor_red"
+        android:entryValues="@array/app_theme_textcolor_redgreen_values"
+        android:entries="@array/app_theme_textcolor_redgreen"
+        app:icon="@drawable/ic_action_app_theme_textcolor_redgreen"
         />
 
     <SwitchPreferenceCompat
