--- a/app/src/main/res/layout/stockroom_smalllist_item.xml
+++ b/app/src/main/res/layout/stockroom_smalllist_item.xml
@@ -37,6 +37,7 @@
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/guideline2"
@@ -74,7 +75,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.21"
+        app:layout_constraintGuide_percent="0.23"
         />
 
     <androidx.constraintlayout.widget.Guideline
