--- a/app/src/main/res/layout/fragment_stockdata.xml
+++ b/app/src/main/res/layout/fragment_stockdata.xml
@@ -417,6 +417,46 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="@string/marker_header"
+            style="@style/section_header"
+            />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/markerLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            >
+          <TextView
+              android:id="@+id/textViewMarkerColor"
+              android:layout_width="20dp"
+              android:layout_height="40dp"
+              app:layout_constraintTop_toTopOf="parent"
+              app:layout_constraintStart_toStartOf="parent"
+              app:layout_constraintBottom_toBottomOf="parent"
+              app:layout_constraintEnd_toStartOf="@id/textViewMarkerText"
+              android:background="@drawable/group_item_bg"
+              />
+          <TextView
+              android:id="@+id/textViewMarkerText"
+              android:layout_width="0dp"
+              android:layout_height="40dp"
+              android:gravity="center_horizontal|center_vertical"
+              android:textSize="16sp"
+              app:layout_constraintTop_toTopOf="parent"
+              app:layout_constraintStart_toEndOf="@+id/textViewMarkerColor"
+              app:layout_constraintEnd_toEndOf="parent"
+              app:layout_constraintBottom_toBottomOf="parent"
+              android:background="@drawable/stock_item_bg"
+              />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <View style="@style/Divider"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="@string/current_assets"
             style="@style/section_header"
             />
