--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -49,6 +49,10 @@
             android:checkable="true"
             android:title="@string/sort_group" />
         <item
+            android:id="@+id/menu_sort_marker"
+            android:checkable="true"
+            android:title="@string/sort_marker" />
+        <item
             android:id="@+id/menu_sort_activity"
             android:checkable="true"
             android:title="@string/sort_activity" />
