--- a/app/src/main/res/layout/stockroom_table_item.xml
+++ b/app/src/main/res/layout/stockroom_table_item.xml
@@ -8,19 +8,66 @@
     style="@style/table_layout_style"
     >
 
-  <TextView
-      android:id="@+id/tableDataGroup"
-      android:layout_width="0dp"
-      android:layout_height="0dp"
-      android:background="@drawable/group_item_bg"
-      android:orientation="vertical"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintEnd_toStartOf="@+id/guideline1"
-      app:layout_constraintTop_toTopOf="parent"
-      />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline1"
+        app:layout_constraintTop_toTopOf="parent"
+        >
 
-  <TextView
+        <TextView
+            android:id="@+id/tableDataGroup"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/group_item_top_bg"
+            app:layout_constraintBottom_toTopOf="@id/guidelineMiddle"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
+        <TextView
+            android:id="@+id/tableDataGroup_sep"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/guidelineMiddle"
+            app:layout_constraintBottom_toTopOf="@id/guidelineBottom"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
+        <TextView
+            android:id="@+id/tableDataGroup_marker"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/group_item_bottom_bg"
+            app:layout_constraintTop_toBottomOf="@id/guidelineBottom"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guidelineMiddle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.7"
+            />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guidelineBottom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.75"
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
       android:id="@+id/tableDataSymbol"
       style="@style/table_item_style"
       android:textStyle="bold"
