--- a/app/src/main/res/layout/stockroom_tile_item.xml
+++ b/app/src/main/res/layout/stockroom_tile_item.xml
@@ -9,17 +9,64 @@
     android:background="@drawable/summary_item_bg"
     >
 
-  <TextView
-      android:id="@+id/stockRoomTileItemGroup"
+  <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="0dp"
       android:layout_height="0dp"
-      android:background="@drawable/group_item_bg"
-      android:orientation="vertical"
       app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toStartOf="@+id/guideline1"
       app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toStartOf="@+id/guideline1"
       app:layout_constraintTop_toTopOf="parent"
-      />
+      >
+
+    <TextView
+        android:id="@+id/stockRoomTileItemGroup"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/group_item_top_bg"
+        app:layout_constraintBottom_toTopOf="@id/guidelineMiddle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
+    <TextView
+        android:id="@+id/stockRoomTileItemGroup_sep"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/guidelineMiddle"
+        app:layout_constraintBottom_toTopOf="@id/guidelineBottom"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
+    <TextView
+        android:id="@+id/stockRoomTileItemGroup_marker"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/group_item_bottom_bg"
+        app:layout_constraintTop_toBottomOf="@id/guidelineBottom"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineMiddle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.7"
+        />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineBottom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.75"
+        />
+
+  </androidx.constraintlayout.widget.ConstraintLayout>
 
   <TextView
       android:id="@+id/stockRoomTileItemSymbol"
