--- a/app/src/main/res/layout/fragment_stockdata.xml
+++ b/app/src/main/res/layout/fragment_stockdata.xml
@@ -751,6 +751,18 @@
                 />
           </com.google.android.material.textfield.TextInputLayout>
 
+          <Button
+              android:id="@+id/button_set_alert_default"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:background="@color/colorPrimary"
+              android:text="@string/button_set_alert_default"
+              android:layout_margin="@dimen/big_padding"
+              android:textColor="@color/buttonLabel"
+              app:layout_constraintTop_toBottomOf="@id/alertBelowNoteInputLayout"
+              app:layout_constraintStart_toStartOf="parent"
+              />
+
           <androidx.constraintlayout.widget.Guideline
               android:id="@+id/guideline1"
               android:layout_width="wrap_content"
