--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -142,7 +142,11 @@ limitations under the License. -->
     <item name="android:layout_width">0dp</item>
     <item name="android:layout_height">0dp</item>
     <item name="android:layout_margin">4dp</item>
-    <item name="android:padding">4dp</item>
+    <!--
+        <item name="android:gravity">center_vertical</item>
+    -->
+    <item name="android:paddingStart">4dp</item>
+    <item name="android:paddingEnd">4dp</item>
     <item name="android:textSize">20sp</item>
     <item name="android:textColor">#FFFFFF</item>
     <item name="android:background">@drawable/calc_roundcorner</item>
@@ -152,7 +156,8 @@ limitations under the License. -->
     <item name="android:layout_width">0dp</item>
     <item name="android:layout_height">0dp</item>
     <item name="android:layout_margin">4dp</item>
-    <item name="android:padding">4dp</item>
+    <item name="android:paddingStart">4dp</item>
+    <item name="android:paddingEnd">4dp</item>
     <item name="android:textSize">12sp</item>
     <item name="android:textColor">#FFFFFF</item>
     <item name="android:background">@drawable/calc_roundcorner</item>
@@ -162,7 +167,8 @@ limitations under the License. -->
     <item name="android:layout_width">0dp</item>
     <item name="android:layout_height">0dp</item>
     <item name="android:layout_margin">4dp</item>
-    <item name="android:padding">4dp</item>
+    <item name="android:paddingStart">4dp</item>
+    <item name="android:paddingEnd">4dp</item>
     <item name="android:textSize">12sp</item>
     <item name="android:textColor">#FFFFFF</item>
     <item name="android:background">@drawable/calc_function_roundcorner</item>
@@ -180,7 +186,8 @@ limitations under the License. -->
     <item name="android:layout_width">0dp</item>
     <item name="android:layout_height">0dp</item>
     <item name="android:layout_margin">4dp</item>
-    <item name="android:padding">4dp</item>
+    <item name="android:paddingStart">4dp</item>
+    <item name="android:paddingEnd">4dp</item>
     <item name="android:textSize">20sp</item>
     <item name="android:textColor">#FFFFFF</item>
     <item name="android:background">@drawable/calc_selection_roundcorner</item>
@@ -190,7 +197,8 @@ limitations under the License. -->
     <item name="android:layout_width">0dp</item>
     <item name="android:layout_height">0dp</item>
     <item name="android:layout_margin">4dp</item>
-    <item name="android:padding">4dp</item>
+    <item name="android:paddingStart">4dp</item>
+    <item name="android:paddingEnd">4dp</item>
     <item name="android:textSize">20sp</item>
     <item name="android:textColor">#FFFFFF</item>
     <item name="android:background">@drawable/calc_shift_roundcorner</item>
@@ -200,7 +208,8 @@ limitations under the License. -->
     <item name="android:layout_width">0dp</item>
     <item name="android:layout_height">0dp</item>
     <item name="android:layout_margin">4dp</item>
-    <item name="android:padding">4dp</item>
+    <item name="android:paddingStart">4dp</item>
+    <item name="android:paddingEnd">4dp</item>
     <item name="android:textSize">14sp</item>
     <item name="android:textColor">#FFFFFF</item>
     <item name="android:background">@drawable/calc_roundcorner</item>
@@ -210,7 +219,8 @@ limitations under the License. -->
     <item name="android:layout_width">0dp</item>
     <item name="android:layout_height">0dp</item>
     <item name="android:layout_margin">4dp</item>
-    <item name="android:padding">4dp</item>
+    <item name="android:paddingStart">4dp</item>
+    <item name="android:paddingEnd">4dp</item>
     <item name="android:textSize">12sp</item>
     <item name="android:textColor">#FFFFFF</item>
     <item name="android:background">@drawable/calc_roundcorner</item>
@@ -220,7 +230,8 @@ limitations under the License. -->
     <item name="android:layout_width">0dp</item>
     <item name="android:layout_height">0dp</item>
     <item name="android:layout_margin">4dp</item>
-    <item name="android:padding">4dp</item>
+    <item name="android:paddingStart">4dp</item>
+    <item name="android:paddingEnd">4dp</item>
     <item name="android:textSize">10sp</item>
     <item name="android:textColor">#FFFFFF</item>
     <item name="android:background">@drawable/calc_function_roundcorner</item>
@@ -230,7 +241,8 @@ limitations under the License. -->
     <item name="android:layout_width">0dp</item>
     <item name="android:layout_height">0dp</item>
     <item name="android:layout_margin">4dp</item>
-    <item name="android:padding">4dp</item>
+    <item name="android:paddingStart">4dp</item>
+    <item name="android:paddingEnd">4dp</item>
     <item name="android:textSize">14sp</item>
     <item name="android:textColor">#FFFFFF</item>
     <item name="android:background">@drawable/calc_shift_roundcorner</item>
