--- a/app/src/main/res/layout/assetview_item.xml
+++ b/app/src/main/res/layout/assetview_item.xml
@@ -126,7 +126,7 @@ limitations under the License. -->
         app:layout_constraintTop_toTopOf="parent"
         />
     <TextView
-        android:id="@+id/textViewAssetCommission"
+        android:id="@+id/text_view_asset_fee"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
