--- a/app/src/main/res/layout/dialog_remove_asset.xml
+++ b/app/src/main/res/layout/dialog_remove_asset.xml
@@ -115,7 +115,7 @@
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:text="@string/commission"
+          android:text="@string/fee"
           app:layout_constraintBottom_toBottomOf="@+id/textInputLayout3"
           app:layout_constraintEnd_toStartOf="@+id/guideline1"
           app:layout_constraintStart_toStartOf="parent"
@@ -133,7 +133,7 @@
           app:endIconMode="clear_text"
           >
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/addCommission"
+            android:id="@+id/add_fee"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/textInputEditText"
