--- a/app/src/main/res/layout/fragment_stockdata.xml
+++ b/app/src/main/res/layout/fragment_stockdata.xml
@@ -87,6 +87,7 @@
             android:id="@+id/textViewChange"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
             android:textSize="13sp"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@id/guidelineVert"
@@ -98,6 +99,7 @@
            android:id="@+id/textViewMarketPriceDelayed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
             android:textSize="10sp"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintEnd_toEndOf="parent"
@@ -122,6 +124,7 @@
             android:id="@+id/textViewAssetChange"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
             android:layout_marginTop="8dp"
             android:gravity="end"
             app:layout_constraintHorizontal_bias="1.0"
