--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -75,6 +75,16 @@ limitations under the License. -->
             android:layout_marginBottom="16dp"
             />
 
+        <Spinner
+            android:id="@+id/symbolsSpinnerGemini"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            />
+
     </LinearLayout>
     <Button
         android:id="@+id/button_add"
